katia test change

--- a/app/public/wp-content/uploads/simply-static/temp-files/simply-static-1-1731922305/index.html
+++ b/app/public/wp-content/uploads/simply-static/temp-files/simply-static-1-1731922305/index.html
@@ -133,7 +133,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 
 <main class="wp-block-group has-global-padding is-layout-constrained wp-block-group-is-layout-constrained" style="margin-top:var(--wp--preset--spacing--60)">
-<h1 class="wp-block-heading has-text-align-left">Katia test</h1>
+<h1 class="wp-block-heading has-text-align-left">Katia test change</h1>
 
 
 
